--- a/index.html
+++ b/index.html
@@ -7,38 +7,50 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet"> 
-  <title>Frontend Mentor | [Blogr]</title>
+  <title>Blogr - Xuan-Tam HOANG</title>
 </head>
 <body>
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
+  <nav>
+    <ul class="main-nav">
+      <li class="nav-item">
+        <a href="#">Product</a>
+        <ul class="sub-nav">
+          <li class="nav-item"><a href="#">Overviez</a></li>
+          <li class="nav-item"><a href="#">Pricing</a></li>
+          <li class="nav-item"><a href="#">Marketplace</a></li>
+          <li class="nav-item"><a href="#">Features</a></li>
+          <li class="nav-item"><a href="#">Integration</a></li>
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a href="#">Company</a>
+        <ul class="sub-nav">
+          <li class="nav-item"><a href="#">About</a></li>
+          <li class="nav-item"><a href="#">Team</a></li>
+          <li class="nav-item"><a href="#">Blog</a></li>
+          <li class="nav-item"><a href="#">Careers</a></li>
+        </ul>
+      </li>
+      <li class="nav-item">
+        <a href="#">Connect</a>
+        <ul class="sub-nav">
+          <li class="nav-item"><a href="#">Contact</a></li>
+          <li class="nav-item"><a href="#">Newsletter</a></li>
+          <li class="nav-item"><a href="#">LinkedIn</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
   
-  Login
-  Sign Up
+  <a href="#" class="btn">Login</a>
+  <a href="#" class="btn btn-primary">Sign Up</a>
 
   <h1>A modern publishing platform</h1>
-  Grow your audience and build your online brand
-
-   <a href="#" class="btn btn-primary">Start for Free</a>
-  <a href="#" class="btn btn-secondary">Learn More</a>
+  <p>Grow your audience and build your online brand</p>
+  <div class="hero-cta">
+    <a href="#" class="btn btn-primary">Start for Free</a>
+    <a href="#" class="btn btn-secondary">Learn More</a>
+  </div>
 
   <section class="future-design">
     <h2>Designed for the future</h2>
@@ -66,76 +78,59 @@
     </p>
   </section>
 
+  <section class="laptop">
 
-  <h3>Free, open, simple</h3>
-  <p>
-    Blogr is a free and open source application backed by a large community of helpful developers. It supports
-    features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
-    and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-  </p>
+    <h3>Free, open, simple</h3>
+    <p>
+      Blogr is a free and open source application backed by a large community of helpful developers. It supports
+      features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
+      and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+    </p>
+  
+    <h3>Powerful tooling</h3>
+    <p>
+      Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+      capable of producing even the most complicated sites.
+    </p>
 
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
+  </section>
 
   <footer>
 
     <div>
+      <img src="images/logo.svg" alt="Blogr footer logo">
+    </div>
+
+    <div>
       <h4>Product</h4>
       <ul class="footer-list">
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
+        <li class="footer-item"><a href="#">Overview</a></li>
+        <li class="footer-item"><a href="#">Pricing</a></li>
+        <li class="footer-item"><a href="#">Marketplace</a></li>
+        <li class="footer-item"><a href="#">Features</a></li>
+        <li class="footer-item"><a href="#">Integrations</a></li>
       </ul>
     </div>
 
     <div>
       <h4>Company</h4>
       <ul class="footer-list">
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
+        <li class="footer-item"><a href="#">About</a></li>
+        <li class="footer-item"><a href="#">Team</a></li>
+        <li class="footer-item"><a href="#">Blog</a></li>
+        <li class="footer-item"><a href="#">Careers</a></li>
       </ul>
     </div>
 
     <div>
       <h4>Connect</h4>
       <ul class="footer-list">
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
-        <li class="footer-item"><a href=""></a></li>
+        <li class="footer-item"><a href="#">Contact</a></li>
+        <li class="footer-item"><a href="#">Newsletter</a></li>
+        <li class="footer-item"><a href="#">LinkedIn</a></li>
       </ul>
     </div>
 
-
   </footer>
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
