--- a/index.html
+++ b/index.html
@@ -6,51 +6,62 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@300;600&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="app/css/style.css">
   <title>Blogr - Xuan-Tam HOANG</title>
 </head>
 <body>
-  <nav>
-    <ul class="main-nav">
-      <li class="nav-item">
-        <a href="#">Product</a>
-        <ul class="sub-nav">
-          <li class="nav-item"><a href="#">Overviez</a></li>
-          <li class="nav-item"><a href="#">Pricing</a></li>
-          <li class="nav-item"><a href="#">Marketplace</a></li>
-          <li class="nav-item"><a href="#">Features</a></li>
-          <li class="nav-item"><a href="#">Integration</a></li>
+  <section class="hero">
+    <header>
+      <img src="images/logo.svg" alt="Blogr Header Logo">
+      <nav>
+        <ul class="main-nav">
+          <li class="nav-item">
+            <a href="#">Product</a>
+            <ul class="sub-nav">
+              <li class="nav-item"><a href="#">Overviez</a></li>
+              <li class="nav-item"><a href="#">Pricing</a></li>
+              <li class="nav-item"><a href="#">Marketplace</a></li>
+              <li class="nav-item"><a href="#">Features</a></li>
+              <li class="nav-item"><a href="#">Integration</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a href="#">Company</a>
+            <ul class="sub-nav">
+              <li class="nav-item"><a href="#">About</a></li>
+              <li class="nav-item"><a href="#">Team</a></li>
+              <li class="nav-item"><a href="#">Blog</a></li>
+              <li class="nav-item"><a href="#">Careers</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a href="#">Connect</a>
+            <ul class="sub-nav">
+              <li class="nav-item"><a href="#">Contact</a></li>
+              <li class="nav-item"><a href="#">Newsletter</a></li>
+              <li class="nav-item"><a href="#">LinkedIn</a></li>
+            </ul>
+          </li>
         </ul>
-      </li>
-      <li class="nav-item">
-        <a href="#">Company</a>
-        <ul class="sub-nav">
-          <li class="nav-item"><a href="#">About</a></li>
-          <li class="nav-item"><a href="#">Team</a></li>
-          <li class="nav-item"><a href="#">Blog</a></li>
-          <li class="nav-item"><a href="#">Careers</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a href="#">Connect</a>
-        <ul class="sub-nav">
-          <li class="nav-item"><a href="#">Contact</a></li>
-          <li class="nav-item"><a href="#">Newsletter</a></li>
-          <li class="nav-item"><a href="#">LinkedIn</a></li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
-  
-  <a href="#" class="btn">Login</a>
-  <a href="#" class="btn btn-primary">Sign Up</a>
+      </nav>
+      <div class="header-cta">
+        <a href="#" class="btn">Login</a>
+        <a href="#" class="btn btn-primary">Sign Up</a>
+      </div>
+    </header>
 
-  <h1>A modern publishing platform</h1>
-  <p>Grow your audience and build your online brand</p>
-  <div class="hero-cta">
-    <a href="#" class="btn btn-primary">Start for Free</a>
-    <a href="#" class="btn btn-secondary">Learn More</a>
-  </div>
+    <div class="hero-content">
+      <h1>A modern publishing platform</h1>
+      <p>Grow your audience and build your online brand</p>
+      <div class="hero-cta">
+        <a href="#" class="btn btn-primary">Start for Free</a>
+        <a href="#" class="btn btn-secondary">Learn More</a>
+      </div>
+    </div>
+  </section>
+
+
 
   <section class="future-design">
     <h2>Designed for the future</h2>
@@ -71,11 +82,18 @@
   </section>
 
   <section class="art-infrastructure">
-    <h2>State of the Art Infrastructure</h2>
-    <p>
-      With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
-      This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-    </p>
+    <div class="container">
+      <div>
+        <img src="images/illustration-phones.svg" alt="Phone illustrations">
+      </div>
+      <div>
+        <h2>State of the Art Infrastructure</h2>
+        <p>
+          With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity.
+          This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+        </p>
+      </div>
+    </div>
   </section>
 
   <section class="laptop">
@@ -96,14 +114,13 @@
   </section>
 
   <footer>
-
     <div>
       <img src="images/logo.svg" alt="Blogr footer logo">
     </div>
 
     <div>
       <h4>Product</h4>
-      <ul class="footer-list">
+      <ul class="footer__list">
         <li class="footer-item"><a href="#">Overview</a></li>
         <li class="footer-item"><a href="#">Pricing</a></li>
         <li class="footer-item"><a href="#">Marketplace</a></li>
@@ -114,7 +131,7 @@
 
     <div>
       <h4>Company</h4>
-      <ul class="footer-list">
+      <ul class="footer__list">
         <li class="footer-item"><a href="#">About</a></li>
         <li class="footer-item"><a href="#">Team</a></li>
         <li class="footer-item"><a href="#">Blog</a></li>
@@ -124,7 +141,7 @@
 
     <div>
       <h4>Connect</h4>
-      <ul class="footer-list">
+      <ul class="footer__list">
         <li class="footer-item"><a href="#">Contact</a></li>
         <li class="footer-item"><a href="#">Newsletter</a></li>
         <li class="footer-item"><a href="#">LinkedIn</a></li>
